DRK-135 Fixed text-wrapping bug in student table

--- a/src/less/modal.less
+++ b/src/less/modal.less
@@ -74,6 +74,10 @@
     color: red;
   }
 
+  .blk-student-table-cell {
+    word-wrap: break-word;
+  }
+
   .blk-form-panel {
     display: inline-block;
     height: 11em;
